docs: done with rpz...

--- a/docs/diploma/01-abstract.tex
+++ b/docs/diploma/01-abstract.tex
@@ -1,13 +1,25 @@
 \section*{РЕФЕРАТ}
 
-\textbf{Тут точно нужно что-то поменять}
+Расчетно-пояснительная записка \pageref{LastPage} с., \totalfigures\ рис., \totaltables\ табл., 37 ист.
 
-Расчетно-пояснительная записка \pageref{LastPage} с., \totalfigures\ рис., \totaltables\ табл., 19 ист., 0 прил.
+Объектом исследования данной работы является сжатие страниц оперативной памяти в ядре Linux. Сжатие данных, коэффициент сжатия которых будет приближен к единице, практически бесполезно. Другими словами, попытки сжать данные, которые сжимаются плохо, или не сжимаются вообще, лишь тратят машинное время и практически не дают никакого преимущества. Целью этой работы является исследование метода сжатия страниц оперативной памяти в ядре Linux и разработка оптимизации для данного метода.
 
-Рассмотрены понятия сжатия данных, оперативной памяти и виртуальной памяти. Характеризованы современные ядра операционных систем: с монолитной и микроядерной архитектурой. Проведён краткий обзор ядра Linux, структур данных и функций отвечающих за управление памятью внутри ядра. Описана работа модуля zRam, позволяющего хранить страницы виртуальной памяти в сжатом виде оперативной памяти.
+Для достижения поставленной цели необходимо решить следующие задачи:
+
+\begin{itemize}[leftmargin=1.6\parindent]
+	\item [---] рассмотреть методы увеличения количества оперативной памяти;
+	\item [---] дать характеристику архитектурам ядер современных операционных систем;
+	\item [---] изучить подходы, структуры данных и API \cite{api} в ядре Linux, позволяющие управлять подсистемой памяти;
+	\item [---] описать работу модуля сжатия оперативной памяти в ядре Linux;
+	\item [---] разработать оптимизацию для данного модуля;
+	\item [---] спроектировать структуру программного обеспечения, реализующего оптимизацию модуля сжатия оперативной памяти;
+	\item [---] сравнить метод сжатия страниц оперативной памяти с оптимизацией и без.
+\end{itemize}
+
+Поставленная цель достигнута: в ходе дипломной работы был разработана оптимизация метода сжатия страниц оперативной памяти в ядре Linux. Разработанная оптимизация повышает скорость работы метода сжатия страниц: это достигается благодаря незначительным жертвам в размере сжатых данных.
 
 КЛЮЧЕВЫЕ СЛОВА
 
-\textit{сжатие, оперативная память, Linux, zRam, операционные системы}
+\textit{сжатие данных, оперативная память, linux, zram, операционные системы.}
 
 \pagebreak
