--- a/docs/diploma/02-naming.tex
+++ b/docs/diploma/02-naming.tex
@@ -1,11 +1,11 @@
 \section*{ОПРЕДЕЛЕНИЯ, ОБОЗНАЧЕНИЯ И СОКРАЩЕНИЯ}
 
-\textbf{Тут точно нужно что-то поменять}
-
 \begin{enumerate}
 	\item ЦПУ (центральное процессорное устройство)  -- электронный блок либо интегральная схема, исполняющая машинные инструкции (код программ), главная часть аппаратного обеспечения компьютера;
 
 	\item ОЗУ (оперативно запоминающие устройство) -- техническое устройство, компонент аппаратного обеспечения компьютера, реализующий функции оперативной памяти.
+	
+	\item Сжатие данных --  это способ (алгоритмический) преобразования информации в другую форму, чаще всего более компактную.
 \end{enumerate}
 
 \pagebreak
