--- a/docs/diploma/03-intro.tex
+++ b/docs/diploma/03-intro.tex
@@ -1,21 +1,18 @@
 \section*{ВВЕДЕНИЕ}
 \addcontentsline{toc}{section}{ВВЕДЕНИЕ}
 
-В последнее десятилетие центральные процессорные устройства (ЦПУ) достигли своей пиковой тактовой частоты -- около 5 Ггц, и этот предел будет преодолён ещё не скоро \cite{cpu_pick}. Из-за того что ЦПУ стали настолько быстрыми, становится нередка ситуация, когда процессор не выполняет инструкции, а ждёт, пока данные переместятся с диска в оперативное запоминающее устройство (или наоборот) \cite{in-kernel-memory-compression}. Так, например, скорость работы системы с мощным ЦПУ, но с маленьким количеством ОЗУ может быть маленькой -- несмотря на быстроту, ЦПУ чисто ожидает подсистему ввода/вывода \cite{in-kernel-memory-compression}. Существует несколько способов увеличения количества оперативной памяти. Один из способов заключается в физическом увеличении количества планок ОЗУ в системе. Данный способ подразумевает покупку и установку планок ОЗУ, что требует денежных затрат. Кроме физического способа увеличения количества памяти, существуют программные способы увеличения количества ОЗУ, например, сжатие данных. Данный способ требует только вычислительные мощности ЦПУ \cite{data-compression-encyclopedia}, а как было указано ранее, ЦПУ часто простаивает в ожидании операций ввода/вывода. Данный факт позволяет направить простаивающие вычислительные мощности ЦПУ на обработку операций сжатия оперативной памяти. Целью данной работы является разработка оптимизации метода сжатия страниц оперативной памяти в ядре Linux.
-
-Цель работы -- изучить метод сжатия страниц виртуальной памяти в оперативной памяти в ядре Linux.
+В последнее десятилетие центральные процессорные устройства (ЦПУ) достигли своей пиковой тактовой частоты -- около 5 Ггц, и этот предел будет преодолён ещё не скоро \cite{cpu_pick}. Из-за того что ЦПУ стали настолько быстрыми, становится нередка ситуация, когда процессор не выполняет инструкции, а ждёт, пока данные переместятся с диска в оперативное запоминающее устройство (или наоборот) \cite{in-kernel-memory-compression}. Так, например, скорость работы системы с мощным ЦПУ, но с маленьким количеством ОЗУ может быть маленькой -- несмотря на быстроту, ЦПУ чисто ожидает подсистему ввода/вывода \cite{in-kernel-memory-compression}. Существует несколько способов увеличения количества оперативной памяти. Один из способов заключается в физическом увеличении количества планок ОЗУ в системе. Данный способ подразумевает покупку и установку планок ОЗУ, что требует денежных затрат. Кроме физического способа увеличения количества памяти, существуют программные способы увеличения количества ОЗУ, например, сжатие данных. Данный способ требует только вычислительные мощности ЦПУ \cite{data-compression-encyclopedia}, а как было указано ранее, ЦПУ часто простаивает в ожидании операций ввода/вывода. Данный факт позволяет направить простаивающие вычислительные мощности ЦПУ на обработку операций сжатия оперативной памяти. Целью данной работы является исследование метода сжатия страниц оперативной памяти в ядре Linux и разработка его оптимизации.
 
 Для достижения поставленной цели необходимо решить следующие задачи:
 
 \begin{itemize}
 	\item рассмотреть методы увеличения количества оперативной памяти;
 	\item дать характеристику архитектурам ядер современных операционных систем;
-	\item изучить подходы, структуры данных и API \cite{api} в ядре Linux, позволяющие управлять оперативной памятью;
+	\item изучить подходы, структуры данных и API \cite{api} в ядре Linux, позволяющие управлять подсистемой памяти;
 	\item описать работу модуля сжатия оперативной памяти в ядре Linux;
 	\item разработать оптимизацию для данного модуля;
 	\item спроектировать структуру программного обеспечения, реализующего оптимизацию модуля сжатия оперативной памяти;
-	\item разработать программное обеспечение для данной оптимизации;
-	\item проверить работоспособность разработанного ПО.
+	\item сравнить метод сжатия страниц оперативной памяти с оптимизацией и без.
 \end{itemize}
 
 \pagebreak
