--- a/docs/diploma/10-analysis.tex
+++ b/docs/diploma/10-analysis.tex
@@ -205,9 +205,11 @@
 
 \subsubsection{Виртуальная память}
 
-Виртуальная память -- специальный механизм организации памяти, при котором процессы работают физическими адресами напрямую, а с виртуальными. С помощью такого подхода в ядре Linux реализуется защита адресного пространства процессов, так, например, процесс не может получить доступ к памяти другого процесса и внести туда изменения.
+Виртуальная память -- специальный механизм организации памяти, при котором процессы работают не с физическими адресами напрямую, а с виртуальными. С помощью такого подхода в ядре Linux реализуется защита адресного пространства процессов, так, например, процесс не может получить доступ к памяти другого процесса и внести туда изменения.
 
 В ядре каждая физическая страница памяти описывается с помощью структуры \texttt{struct page}. Рассматриваемая структура с наиболее важными полями представлена в листинге \ref{code:struct_page}.
+
+\newpage
 
 \begin{code}
 	\captionof{listing}{Структура \texttt{struct page}}
@@ -282,7 +284,7 @@
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=\textwidth]{img/memory_schema.pdf}
+	\includegraphics[width=\textwidth]{img/memory.pdf}
 	\caption{Схема управления памятью}
 	\label{fig:memory_schema}
 \end{figure}
@@ -291,7 +293,7 @@
 
 Подкачка страниц -- специальный механизм внутри ядра Linux, который реализован благодаря механизму виртуальной памяти, при котором отдельные страницы оперативной памяти записываются не в ОЗУ, а, чаще всего, в специальное вторичное хранилище, например, жесткий диск. Ядро само выбирает, какие страницы памяти попадут в это хранилище. Чаще всего, это неактивные или реже всего использующиеся страницы памяти. 
 
-Выгруженные из оперативной памяти страницы могут храниться как в специальном разделе жесткого диска, так и в файле. Пространство, где хранятся эти страницы, называется swap-пространством. При попытке обратиться к выгруженной странице, в ядре происходит исключительная ситуация, называемая page fault \cite{page-fault}. Обработчик прерываний обрабатывает данный запрос и перемещает страницу обратно в оперативную память. На рисунке \ref{img:swap} представлена схема работы подсистемы подкачки страниц в ядре Linux.
+Выгруженные из оперативной памяти страницы могут храниться как в специальном разделе жесткого диска, так и в файле. Пространство, где хранятся эти страницы, называется swap-пространством. При попытке обратиться к выгруженной странице, в ядре происходит исключительная ситуация, называемая page fault \cite{page-fault}. Обработчик прерываний обрабатывает данный запрос и перемещает страницу обратно в оперативную память. На рисунке \ref{fig:swap} представлена схема работы подсистемы подкачки страниц в ядре Linux.
 
 \begin{figure}[h]
 	\centering
@@ -300,11 +302,36 @@
 	\label{fig:swap}
 \end{figure}
 
+\subsubsection{Блочные устройства}
+
+Блочное устройство -- специальный интерфейс в ядре Linux, обеспечивающий доступ к реальному или виртуальному устройству \cite{block-devices}. Представляет из себя файл в файловой системе. Блочные устройства характеризуются случайным доступом к данным, организованным в блоки фиксированного размера. Примерами таких устройств являются жестки диски, приводы CD-ROM, RAM-диски и т.д. Скорость блочных устройств, как правило, намного выше, чем скорость символьных устройств \cite{character-devices}. В символьных устройствах данные обрабатываются последовательно, без возможности произвольного доступа и по одному символу. Ядро Linux предоставляет специальное API для работы с блочными устройствами.
+
+Работать с блочными устройствами сложнее, чем с символьными. Символьные устройства имеют одну текущую позицию, в то время как блочные устройства должны иметь возможность перемещаться на любую позицию в устройстве, для того чтобы обеспечить произвольный доступ к данным. Для упрощения работы с блочными устройствами ядро Linux представляет подсистему называемую подсистемой блочного ввода-вывода.
+
+С точки зрения ядра наименьшей логической единицей адресацией является блок. Хотя физическое устройство может быть адресовано на уровне сектора, ядро выполняет все дисковые операции с использованием блоков. Поскольку наименьшей единицей физической адресации является сектор, размер блока должен быть кратен размеру сектора. Кроме того, размер блока должен выполнять требование \ref{eq:nepridymalnazvanie} (размер должен быть кратен цифре два, возведенную в любую степень) и не может превышать размер страницы памяти (PAGE\_SIZE). 
+
+\begin{equation}\label{eq:nepridymalnazvanie}
+	block\_size \; mod \; 2^N = 0, N \in [0, \inf]
+\end{equation}
+
+Размер блока может варьироваться в зависимости от используемой файловой системы, наиболее распространенными значениями являются 512 байт, 1 килобайт или 4 килобайта \cite{block-devices}.
+
+На рисунке \ref{fig:block-devices} представлена схема взаимодействия блочного и физического устройства.
+
+\begin{figure}[h]
+	\centering
+	\includegraphics[width=\textwidth]{img/block-devices.pdf}
+	\caption{Схема взаимодействия блочного и физического устройства}
+	\label{fig:block-devices}
+\end{figure}
+
 \subsection{Модуль ядра zram}
 
-Модуль ядра zram создает в оперативной памяти специальное блочное устройство. Такое устройство можно создать из пространства пользователя. Страницы памяти, попадающие в это устройство, сжимаются и хранятся прямо в оперативной памяти. Такой подход обеспечивает экономию памяти и быстрый ввод/вывод \cite{zram}. 
+Модуль ядра zram создает в оперативной памяти специальное блочное устройство. Такое устройство можно создать из пространства пользователя. Страницы памяти, попадающие в это устройство, сжимаются и хранятся прямо в оперативной памяти. Такой подход обеспечивает экономию памяти и быстрый ввод/вывод, по сравнению с использованием дисковых хранилищ \cite{zram}. 
 
-Чаще всего, созданное блочное устройство zram устанавливают как в качестве подсистемы подкачки. Механизм swap отправляет страницу в zram через подсистему блочного ввода-вывода. Сжатая страница внутри zram идентифицируется уникальным ключом $zkey$ (\ref{fig:zkey}):
+Созданное блочное устройство zram можно установить в качестве системы подкачки (swap) или в качестве в блочного устройства для файловых хранилищ, хранящихся в оперативной памяти. Примером такого хранилища  является tmpfs \cite{tmpfs}. 
+
+Но, чаще всего, zram используется в паре с swap. Механизм swap отправляет страницу в zram через подсистему блочного ввода-вывода. Сжатая страница внутри zram идентифицируется уникальным ключом $zkey$ (\ref{fig:zkey}):
 
 \begin{equation}\label{fig:zkey}
 	zkey = device\_id + offset
@@ -313,7 +340,7 @@
 
 Когда система подкачки определяет, что какая-либо из страниц, хранящихся в устройстве подачки, необходима пользователю (когда происходит прерывание page fault), устройство zram уведомляется, о том, что необходимо привести запрашиваемую страницу с идентификатор $zkey$ преобразовать к исходному виду и вернуть её системе. Пока данные находятся в сжатом состоянии, система не может прочитать или записать какие-либо отдельные байты из этой сжатой последовательности. Современные алгоритмы могут сжимать любое количество последовательных байт. Несмотря на это, модуль ядра zram использует работает лишь с виртуальными страницами памяти.
 
-Для достижения высокой степени сжатия требуется выполнение большого количества команд ЦПУ, тогда как менее эффективное сжатие может выполняться быстрее. В ядре необходимо добиться баланса между временем и степенью сжатия. Кроме того, важно чтобы выбор алгоритма оставался гибким. Например для выполнения одной задачи подойдёт один алгоритм сжатия, а для второй другой. В модуле ядре zram существует специальное API, доступное из пространства пользователя, для выбора алгоритма сжатия. Данный модуль поддерживает несколько алгоритмов сжатия, например DEFLATE \cite{deflate}, LZ4 \cite{lz4}, zstd \cite{zstd}. 
+Для достижения высокой степени сжатия требуется выполнение большого количества команд ЦПУ, тогда как менее эффективное сжатие может выполняться быстрее. В ядре необходимо добиться баланса между временем и степенью сжатия. Кроме того, важно чтобы выбор алгоритма оставался гибким. Например для выполнения одной задачи подойдёт один алгоритм сжатия, а для второй другой. В модуле ядре zram существует специальное API, доступное из пространства пользователя, для выбора алгоритма сжатия. Данный модуль поддерживает несколько алгоритмов сжатия, например DEFLATE \cite{deflate}, LZ4 \cite{lz4}, LZO \cite{lzo}, LZO-RLE\cite{lzo-rle} 842 \cite{842}, zstd \cite{zstd}. 
 
 Из-за того что размер страницы достаточно большой (4 Кб), сжатие и восстановление данных -- дорогостоящие операции, поэтому необходимо ограничить количество этих операций. Нужно тщательно выбирать, какие страницы стоит сжимать, а какие нет. Алгоритм, реализованный в ядре Linux, определяющий какие страницы нужно сжимать, выбирает те страницы, которые вероятно будут использоваться снова, но вряд ли будут использоваться в ближайшем будущем \cite{in-kernel-memory-compression}. Такая реализация позволяет не тратить всё время ЦПУ на многократное сжатие и распаковку страниц. Кроме того, необходимо чтобы ядро могло идентифицировать сжатую страницу -- иначе её невозможно найти и распаковать.
 
@@ -410,14 +437,10 @@ zram устраняет дубликаты страниц, которые сос
 
 \subsection{Вывод}
 
-В данном разделе был проведен анализ предметной области. 
+В данном разделе был проведен анализ предметной области: были рассмотрены понятия сжатия данных, оперативной памяти и информационной энтропии. Была дана характеристика алгоритмам сжатия. 
 
-Были рассмотрены понятия сжатия данных, оперативной памяти и виртуальной памяти. 
+Были характеризованы современные ядра операционных систем: с монолитной и микроядерной архитектурой. Проведён краткий обзор ядра Linux, структур данных и API управления подсистемой памяти внутри ядра. 
 
-Были характеризованы современные ядра операционных систем: с монолитной и микроядерной архитектурой. 
-
-Проведён краткий обзор ядра Linux, структур данных и API управления памятью внутри ядра.
-
-Описана работа модуля zRam, позволяющего хранить страницы виртуальной памяти в сжатом виде оперативной памяти.
+Была описана работа модуля ядра zram, позволяющего хранить страницы виртуальной памяти в сжатом виде оперативной памяти: приведен обзор используемых структур и схему взаимодействия zram, ядра и пользователя.
 
 \pagebreak
