--- a/docs/diploma/30-technology.tex
+++ b/docs/diploma/30-technology.tex
@@ -6,7 +6,7 @@
 
 \subsubsection{Выбор языка программирования}
 
-Ядро ОС Linux написано на языке программирования C с использованием стандарта C89. Встроенный драйвер ядра Linux, zram, так же написан на языке программирования С. Программное обеспечение представляет из себя модификацию модуля ядра zram, в связи с чем для реализации программного обеспечения был выбран язык программирования C версии стандарта C89. В модуле ядра zram, как и в ядре Linux, используется процедурный подход к программированию. Язык C поддерживает процедурную парадигму программирования.
+Ядро ОС Linux написано на языке программирования C \cite{C89} с использованием стандарта C89/C90. Встроенный драйвер ядра Linux, zram, так же написан на языке программирования С. Программное обеспечение представляет из себя модификацию модуля ядра zram, в связи с чем для реализации программного обеспечения был выбран язык программирования C версии стандарта C89. В модуле ядра zram, как и в ядре Linux, используется процедурный подход к программированию. Язык C поддерживает процедурную парадигму программирования.
 
 \subsubsection{Версия ядра Linux}
 
@@ -14,7 +14,7 @@
 
 \subsection{Сборка программного обеспечения}
 
-Разработанное программное обеспечение является часть ядра Linux. Для сборки проекта используется специальная утилита make, позволяющая автоматизировать сборку ядра. make является кроссплатформенной системой автоматизации сборки программного обеспечения из исходного кода. make позволяет существенно ускорить процесс сборки проекта. Так, например, при изменении одного исходного файла проекта, заново будет собран в объектный файл лишь этот исходный файл, а не все файлы проекта.
+Разработанное программное обеспечение является часть ядра Linux. Для сборки проекта используется специальная утилита make \cite{make}, позволяющая автоматизировать сборку ядра. make является кроссплатформенной системой автоматизации сборки программного обеспечения из исходного кода. make позволяет существенно ускорить процесс сборки проекта. Так, например, при изменении одного исходного файла проекта, заново будет собран в объектный файл лишь этот исходный файл, а не все файлы проекта.
 
 Для сборки и включения модуля zram в итоговый образ ядра Linux, в конфигурационном файле ядра необходимо включить опции, указанные в листинге \ref{code:defconfig}. Ниже приведено детальное описание включаемых опций:
 
@@ -94,7 +94,9 @@
 
 Для вычисления логарифма используется встроенная функция ядра ilog2. В ядре Linux нет поддержки чисел с плавающей запятой, поэтому функция ilog2 работает только с целыми числами. Передаваемый параметр в функцию ilog2 ($p_{i}$) возводится в 4 степень для увлечения точности вычислений.
 
-Пример реализации функции shannon\_entropy() для модуля zram представлен в листинге \ref{code:shannon_entropy}
+Пример реализации функции shannon\_entropy() для модуля zram представлен в листинге \ref{code:shannon_entropy}.
+
+\newpage
 
 \begin{code}
 	\captionof{listing}{Функция shannon\_entropy()}
