--- a/docs/diploma/50-conclusion.tex
+++ b/docs/diploma/50-conclusion.tex
@@ -3,14 +3,20 @@
 
 \textbf{Это надо поменять}
 
-Были рассмотрены понятия предметной области: сжатия данных, оперативной памяти и виртуальной памяти. 
+В ходе выполнения дипломной работы был исследован метод сжатия страниц оперативной памяти в ядре Linux и была разработана его оптимизации.
 
-Были характеризованы современные ядра операционных систем: с монолитной и микроядерной архитектурой, описаны их плюсы и минусы.
+Для достижения поставлен­ной цели были решены следующие задачи:
 
-Проведён краткий обзор ядра Linux, структур данных и функций отвечающих за управление памятью внутри ядра: \texttt{struct page}, \texttt{alloc\_pages()}, \texttt{alloc\_page()}.
+\begin{itemize}
+	\item рассмотрены методы увеличения количества оперативной памяти;
+	\item дана характеристика архитектурам ядер современных операционных систем;
+	\item изучены подходы, структуры данных и API \cite{api} в ядре Linux, позволяющие управлять подсистемой памяти;
+	\item описана работа модуля сжатия оперативной памяти в ядре Linux;
+	\item разработана оптимизацию для данного модуля;
+	\item спроектирована структура программного обеспечения, реализующего оптимизацию модуля сжатия оперативной памяти;
+	\item сравнен метод сжатия страниц оперативной памяти с оптимизацией и без.
+\end{itemize}
 
-Описана работа модуля zRam, позволяющего хранить страницы виртуальной памяти в сжатом виде оперативной памяти. Рассмотрены основные структуры данных, использующиеся в этом модуле: \texttt{struct zram} и\\ \texttt{struct zram\_table\_entry}.
-
-Таким образом, цель работы, изучить метод сжатия страниц виртуальной памяти в оперативной памяти в ядре Linux, была достигнута.
+Разработанная оптимизация была отправлена в качестве RFC письма разработчикам модуля ядра zram. В качестве дальнейшего развития было предложено вычисление порогового значения информационной энтропии не статически (на стадии компиляции), а динамически (во время работы блочного устройства).
 
 \pagebreak
