--- a/docs/diploma/60-bibliography.tex
+++ b/docs/diploma/60-bibliography.tex
@@ -56,8 +56,17 @@
 	\bibitem{4kb-page-size}
 	Using 4KB Page Size for Virtual Memory is Obsolete [Электронный ресурс]. – Режим доступа: https://ieeexplore.ieee.org/document/5211562, свободный – (10.11.2021)
 	
+	\bibitem{block-devices}
+	Block Device Drivers — The Linux Kernel documentation [Электронный ресурс]. – Режим доступа: 	https://linux-kernel-labs.github.io/refs/heads/master/labs/block\_device\_drivers.html, свободный – (10.03.2022)
+	
+	\bibitem{character-devices}
+	Character Device Drivers — The Linux Kernel documentation [Электронный ресурс]. – Режим доступа: 		https://linux-kernel-labs.github.io/refs/heads/master/labs/device\_drivers.html, свободный – (10.03.2022)
+	
 	\bibitem{zram}
 	zram: Compressed RAM-based block devices - The Linux Kernel Documentation [Электронный ресурс]. – Режим доступа: https://www.kernel.org/doc/html/latest/admin-guide/blockdev/zram.html, свободный – (10.11.2021)
+	
+	\bibitem{tmpfs}
+	Tmpfs — The Linux Kernel documentation [Электронный ресурс]. – Режим доступа: https://www.kernel.org/doc/html/latest/filesystems/tmpfs.html, свободный – (10.03.2022)
 	
 	\bibitem{deflate}
 	DEFLATE Compressed Data Format Specification version 1.3 [Электронный ресурс]. – Режим доступа: https://www.w3.org/Graphics/PNG/RFC-1951, свободный – (20.11.2021)
@@ -65,11 +74,26 @@
 	\bibitem{lz4}
 	lz4/lz4: Extremely Fast Compression algorithm - GitHub [Электронный ресурс]. – Режим доступа: https://github.com/lz4/lz4, свободный – (20.11.2021)
 	
+	\bibitem{lzo}
+	LZO -- a real-time data compression library | GitHub [Электронный ресурс]. – Режим доступа: https://github.com/nemequ/lzo/blob/master/doc/LZO.TXT, свободный – (20.11.2021)
+	
+	\bibitem{lzo-rle}
+	lzo-rle - Linux Kernel | Github [Электронный ресурс]. – Режим доступа: https://github.com/torvalds/linux/blob/master/crypto/lzo-rle.c – (27.04.2022)
+	
+	\bibitem{842}
+	Algorithm 842: A set of GMRES routines for real and complex arithmetics on high performance computers [Электронный ресурс]. – Режим доступа: https://dl.acm.org/doi/10.1145/1067967.1067970, свободный – (20.11.2021)
+	
 	\bibitem{zstd}
 	facebook/zstd: Zstandard - Fast real-time compression algorithm [Электронный ресурс]. – Режим доступа: https://github.com/facebook/zstd, свободный – (20.11.2021)
 	
 	\bibitem{page-fault}
 	Kernel level exception handling -- The Linux Kernel Documentation [Электронный ресурс]. – Режим доступа: https://github.com/facebook/zstd, свободный – (20.11.2021)
+	
+	\bibitem{C89}
+	ISO/IEC 9899:1990 - Programming languages — C
+	
+	\bibitem{make}
+	Make - GNU Project - Free Software Foundation [Электронный ресурс]. – Режим доступа: https://www.gnu.org/software/make/, свободный – (27.04.2022)
 	
 	\bibitem{pdf}
 	What is a PDF? Portable Document Format | Adobe Acrobat [Электронный ресурс]. – Режим доступа: 	https://www.adobe.com/acrobat/about-adobe-pdf.html, свободный – (27.04.2022)
@@ -88,6 +112,9 @@
 	
 	\bibitem{bernoulli-process}
 	Bernoulli Process - an overview | ScienceDirect Topics [Электронный ресурс]. – Режим доступа: https://www.sciencedirect.com/topics/mathematics/bernoulli-process, свободный – (27.04.2022)
+	
+	\bibitem{rfc-kernel-patch}
+	[RFC,v1] zram: experimental patch with entropy calculation | Patchwork [Электронный ресурс]. – Режим доступа: https://patchwork.kernel.org/project/linux-block/patch/20220520171309.26768-1-avromanov@sberdevices.ru/, свободный – (27.05.2022)
 \end{thebibliography}
 \endgroup
 
