--- a/docs/diploma/preambule.tex
+++ b/docs/diploma/preambule.tex
@@ -3,6 +3,10 @@
 
 \usepackage{extsizes} % Для добавления в параметры класса документа 14pt
 
+\usepackage{algpseudocode}
+\usepackage{algorithm}
+\floatname{algorithm}{Алгоритм}
+
 % Для работы с несколькими языками и шрифтом Times New Roman по-умолчанию
 \usepackage[english,russian]{babel}
 \usepackage{fontspec}
